Fix contact form alignment

--- a/pages/contato/index.module.css
+++ b/pages/contato/index.module.css
@@ -14,10 +14,6 @@
   height: 100%;
 }
 
-.container main div {
-  padding: 1em;
-}
-
 .formContainer {
   margin-bottom: 2em;
   width: 100%;
